--- a/style.css
+++ b/style.css
@@ -41,3 +41,6 @@ form{
     font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
+.error-box {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
