--- a/styles/style.css
+++ b/styles/style.css
@@ -1,17 +1,20 @@
 
+body{
+    background-color: black;
+}
 
 main{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 a{
-    color: black;
+    color: white;
     text-decoration: none;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .background{
-    background-color:#cce0ff;
+    background-color:#99AEAD;
     margin-bottom: 0%;
     margin-top: 0%;
 }
@@ -25,11 +28,14 @@ a{
 header{
     grid-column-start: 1;
     grid-column-end: 4;
+    background-color: black;
 }
 
 nav{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin-right: 0%;
+    width: 250px;
+    
 }
 
 form{
@@ -48,25 +54,23 @@ form{
 }
 
 .post-box {
-    border-bottom: white 20px solid;
-    
+    border-bottom: black 50px solid;
 }
 
 .add-comment-box {
-    background-color: whitesmoke;
+    background-color: #C4CDC1;
     margin:0;
     padding-top: 20px;
 }
 
 .post{
     text-align: center;
-
 }
 
 .comments-box {
     text-align: center;
     padding-bottom: 20px;
-    background-color: whitesmoke;
+    background-color: #C4CDC1;
     margin:0;
     border-bottom: black 5px solid;
 }
@@ -77,7 +81,6 @@ form{
 .comment{
     padding-bottom: 10px;
 }
-
 
 .notification{
     padding-bottom: 10px;
@@ -90,14 +93,14 @@ form{
 
 .otherblogs{
     display: flex;
-    background-color: whitesmoke;
-    border: #cce0ff 3px solid;
+    background-color: white;
+    border:whitesmoke 4px solid;
     position: relative;
     justify-content: center;
     border-radius: 10px;
-    margin-left: 30%;
-    margin-right: 30%;
-
+    margin-left: 35%;
+    margin-right: 35%;
+    color: black;
 }
 
 .image {
@@ -113,7 +116,7 @@ ul{
     position: relative;
     display: flex;
     justify-content: center;
-    border-bottom: black 5px solid;
+    border-bottom: whitesmoke 5px solid;
 }
 li {
     list-style: none;
@@ -121,6 +124,7 @@ li {
 
   label {
     position: relative;
+    color:white;
   }
 
   input[type="checkbox"] {
@@ -144,7 +148,7 @@ li {
     height: 60px;
     width: 60px;
     background: black;
-    color:lavender;
+    color:#DEE1DD;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -166,6 +170,19 @@ li {
     animation: glow 1.5s linear infinite;
   }
 
+  input[type="text"],textarea{
+      border: black 2px solid;
+      border-radius: 20px;
+      color: black;
+  }
+
+  input[type="submit"]{
+      border: black 2px solid;
+      border-radius: 20px;
+      background-color: white;
+      font-size: 18px;
+  }
+
   @keyframes glow {
     0% {
       filter: hue-rotate(0deg);
@@ -176,9 +193,67 @@ li {
   }
 
   .post-information{
-      background-color: white;
+      background-color: #DEE1DD;
       margin-top: -20px;
   }
+
+  .label{
+      color:black;
+  }
+
+  .notification-container {
+    position: fixed;
+    top: 15px;
+    right: 15px;
+  }
+  
+  .notification {
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    color: #fff;
+    font-size: 16px;
+    padding: 15px 20px;
+    line-height: 20px;
+    margin-bottom: 15px;
+    animation: grow 0.5s ease-in forwards;
+  }
+  
+  @keyframes grow {
+    from {
+        opacity: 0;
+        transform: scale(0.8);
+    }
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
+  }
+  
+  .notification.hide {
+    animation: shrink 0.3s ease-out forwards;
+  }
+  
+  @keyframes shrink {
+    to {
+        opacity: 0;
+        transform: scale(0.8);
+    }
+  }
+  
+  .notification strong {
+    font-size: 12px;
+    line-height: 20px;
+    letter-spacing: 0.5px;
+    text-transform: uppercase;
+  }
+  
+  .notification-info {
+    background-color: #99AEAD;
+    width: 200px;
+    
+  }
+
 @media only screen and (max-width: 1200px) {
     .image{
         width: 200px;
